# siege-factory

./: .gitignore  AGENTS.md  Cargo.toml  build.rs  build_wasm.ps1  index.html  stderr.txt
.cargo/: config.toml
.github/workflows/: ci.yml
.jules/: bolt.md  palette.md  sentinel.md
.opencode/: opencode.json  rules.md
.opencode/agent/: scout.md
assets/textures/: manifest.ron
assets_src/: SVG_STYLE_GUIDE.md
data/: buildings.toml  crops.toml  discoveries.toml  enemies.toml  keybindings.toml  main_menu.toml  map_config.toml  menu.toml  recipes.toml  resources.toml  units.toml  visuals.toml  waves.toml
docs/: 00_note.md  0_README.md  10_DEBUG_DEVTOOLS.md  11_PERFORMANCE_BUDGET.md  12_TESTING_STRATEGY.md  13_SAVE_LOAD.md  14_CAMERA_INPUT.md  15_CONFIG_SETTINGS.md  16_MAP_GENERATION.md  17_GAME_MODES.md  18_REFERENCE.md  19_BELT_SCALING.md  19_DATA_DRIVEN_REFACTOR.md  1_GAME_DESIGN.md  20_RESOURCE_TREE.md  20_UX_IMPROVEMENTS.md  21_RESOURCE_TREE_V2.md  22_UI_DATA_DRIVEN.md  2_ARCHITECTURE.md  3_DATA_DESIGN.md  4_MULTIPLAYER.md  5_ROADMAP.md  6_CODING_CONVENTIONS.md  7_UI_HUD.md  8_ASSET_PIPELINE.md  9_BUILD_CI.md  AUTOMATION_DESIGN.md  LORE_ENVIRONMENT.md  TECH_TREE.md  TUTORIAL_DESIGN.md  UI_ARCHITECTURE.md  UI_COMPONENTS.md  UI_COMPONENT_TEMPLATE.md  UI_PANELS.md
mods-dev/genesis_protocol/: UNSUPPORTED_FEATURES.md  mod.toml
mods/base/: mod.toml
src/: events.rs  lib.rs  main.rs  rendering.rs  save_load.rs
tests/: comprehensive_test.rs  data_driven_tests.rs  drag_drop_tests.rs  economy_integration_tests.rs  ecs_integration_tests.rs  enemy_map_tests.rs  fow_integration_test.rs  grid_tests.rs  rendering_tests.rs  save_load_tests.rs
web/: siege_factory.d.ts  siege_factory.js  siege_factory_bg.wasm  siege_factory_bg.wasm.d.ts
(+243 files in other folders)
