[package]
name = "siege-factory"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
bevy = "0.14"
rand = "0.8"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
uuid = { package = "uuid", version = "1", features = ["js"] }
web-sys = { version = "0.3", features = ["console"] }


[dev-dependencies]
proptest = "1"

[profile.release]
opt-level = 2
lto = "thin"
