[package]
name = "siege-factory"
version = "0.1.0"
edition = "2024"
default-run = "siege-factory"

[lib]
crate-type = ["rlib"]

[dependencies]
bevy = { version = "0.19", features = [
    "bevy_picking",
] }
rand = "0.8"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
bevy_pancam = "0.21"
ron = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
uuid = { package = "uuid", version = "1", features = ["js"] }
web-sys = { version = "0.3", features = ["console"] }


[build-dependencies]
regex = "1"
resvg = "0.44"

[dev-dependencies]
proptest = "1"
serde = "1"
toml = "0.8"

[profile.dev]
codegen-units = 16
debug = 0

[profile.release]
opt-level = 2
lto = "thin"
